# daily-piano-exercise

./: .gitignore  Cargo.toml  Gemfile  Rakefile  icon.aseprite  main.rb  readme.md  upload.sh
.github/workflows/: ruby.yml
lib/: exercise.rb  note.rb  parts.rb
lib/tasks/: musescore.rake
public/: style.css
scores/: exercises_scores.mscx  export.rb
scripts/: format_musescore_exports.rb
src/: exercise.rs  main.rs  parts.rs  render.rs
src/lib/: lib.rs  note.rs
src/parts/: major_broken_chord.rs  major_scale.rs  minor_broken_chord.rs  minor_harmonic_scale.rs  minor_natural_scale.rs
src/resources/: main.js  style.css
src/templates/: base.html  exercise.html  index.html
test/: exercise.test.rb  note.test.rb  parts.test.rb  tests.rb
views/: exercise.erb  exercise_summary.erb  index.erb  layout.erb  license.erb
