[package]
name = "daily-piano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "dailypiano"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
tera = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.6.2"